update student query for application overview page (#126)
* update student query for application overview page

* application distribution move to db level

* add getApplicationProgramsUpdateStatus

* remove full application fetch in AgentPage

---------
